k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-Pod
spec:
  containers:
    - name: test-container
      image: hub.atguigu.com/library/myapp:v1
      command: ["/bin/sh", "-c", "env"]
  restartPolicy: Never
