k8s/Ingress_http_ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: nginx-test
spec:
  rules:
    - host: foo.bar.com
      http: 
        paths:
          - path: /
            backend: 
              serviceName: nginx-svc
              servicePort: 80
